# spore

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  asdf  gen.py
src/: CLI.txt  argument.rs  bits.rs  instruction.rs  main.rs  natural_index.rs  opcode.rs  operand.rs  options.rs  theme.rs
src/tests/: mod.rs
